# High-Level-Programming-Laboratory-Work

./: .gitignore
menu norm/: CMakeLists.txt  MenuManage.cpp  MenuManage.h  main.cpp
menu norm/Containers/: MySchool.h  MyStudent.h  MyTeacher.h  MyVector.h
menu norm/Models/ClassRoom/: School.cpp  School.h
menu norm/Models/UserInheritance/: Teacher.cpp  Teacher.h  User.cpp  User.h  student.cpp
menu norm/MyMenu/: MenuManage.cpp  MenuManage.h  MyMenu.cpp  MyMenuItem.cpp
study/menu norm/: CMakeLists.txt  main.cpp
study/menu norm/Containers/: MySchool.h  MyStudent.h  MyTeacher.h
study/menu norm/Models/UserInheritance/: Student.cpp  Student.h
study/menu norm/MyMenu/: MenuManage.cpp  MenuManage.h  MyMenuItem.cpp
